Changed picture in header, completed sign up section, completed footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast. The logo has a spiral design that is split in the middle. </p>
                 <button>Sign up</button>
             </div>
-            <img src="./logo-sprial.jpg" alt="placehdolder">
+            <img src="./card.jpg" class="card" alt="placehdolder">
         </div>
     </div>
     <div class="rand-info">
@@ -52,10 +52,14 @@
         <div class="quote">It's easy to feel hopeful on a beautiful day like today, but there will be dark days ahead of us too. There will be days where you feel all alone, and that's when hope is needed most. No matter how buried it gets, or how lost you feel, you must promise me that you will hold on to hope. Keep it alive.</div>
         <div class="quote-author"> - Gwen Stacy</div>
     </div>
-    <div class="Call-to">
-        <div class="action">Call to action! It's time!</div>
-        <div class="sub-action">Sign up for our product by clicking that button over there!</div>
-        <button>Sign up</button>
+    <div class="Call-to-back">
+        <div class="Call-to">
+            <div>
+            <div class="action">Call to action! It's time!</div>
+            <div class="sub-action">Sign up for our product by clicking that button over there!</div>
+            </div>
+            <button class="white-border-button">Sign up</button>
+        </div>
     </div>
     <div class="footer">
         <div>Copyright ©</div>
